# AI_trabalho1

./: .gitignore  CMakeLists.txt  CNNlayer.c  Makefile  gen_rand_kernel.py  kernel-bank-norm.txt  kernel-bank.txt  neural_net-tarefa.c  neural_net.c  normalize_images.py  normalize_kernel.py  run_test.py  testing.c  training.c
